# gen-blob

./: .gitignore  AUTHORS  ChangeLog  EZX_README  Makefile  Makefile.am  Makefile.in  README  RELEASE-NOTES  build  config.cache  config.status  configure  configure.in  setenv  setenv3  setenv4
doc/: Makefile  Makefile.am  Makefile.in  commandlist.txt  diag.txt  porting.txt
include/: Makefile  Makefile.am  Makefile.in
include/blob/: HW_init.h  Makefile  Makefile.am  Makefile.in  SW_init.h  arch.h  bl_cmds_handler.h  bl_flash.h  bl_flash_header.h  bl_parser.h  bl_utility.h  boot_modes.h  bt_uart.h  command.h  command_hist.h  common.h  config.h  config.h.in  errno.h  error.h  flash.h  handshake.h  hw_uart.h  icache.h  init.h  lcd.h  lcd_ezx.h  led.h  linux.h  log.h  main.h  md5.h  md5support.h  memory.h  memsetup.h  menu.h  mmc.h  mmu.h  param_block.h  part.h  (+12 more)
include/blob/arch/: Makefile  Makefile.am  Makefile.in  lubbock.h
src/: Makefile  Makefile.am  Makefile.in
src/blob/: HW_init.c  Makefile  Makefile.am  Makefile.in  SW_init.c  acconfig.h  bl_cmds_handler.c  bl_parser.c  bl_utility.c  boot_modes.c  bootldrpart.c  chain.S  chkmem.c  clock.c  commands.c  ctype.c  debug.c  fat.c  file.c  flash.c  flashasm.S  handshake.c  hw_uart.c  initcalls.c  intel16.c  intel32.c  keypad.c  ledasm.S  linux.c  lubbock.c  main.c  memory.c  memsetup.S  menu.c  mmc.c  param_block.c  part.c  part_dos.c  pcap.c  pcap.h  (+21 more)
src/blob/.deps/: HW_init.P  SW_init.P  bl_cmds_handler.P  bl_parser.P  bl_utility.P  boot_modes.P  bootldrpart.P  ctype.P  fat.P  file.P  flash.P  handshake.P  initcalls.P  intel16.P  keypad.P  linux.P  lubbock.P  main.P  memory.P  menu.P  mmc.P  param_block.P  part.P  part_dos.P  pcap.P  printlcd_8bit.P  usb-mot1.P  usb_ctl.P  usb_ep0.P  usb_ep1.P  usb_ep2.P  vsprintf.P
src/diag/: Makefile  Makefile.am  Makefile.in  command_hist.c  commands.c  initcalls.c  lcd.c  ld-script  lubbock.c  main.c  regs-sa11x0.c  stack.S  start.S
src/diag/.deps/: command_hist.P  commands.P  initcalls.P  lubbock.P  main.P  regs-sa11x0.P
src/lib/: Makefile  Makefile.am  Makefile.in  command.c  error.c  icache.c  init.c  led.c  md5.c  md5support.c  memcpy.c  mmu.c  reboot.c  serial-pxa.c  serial.c  strlen.c  strncmp.c  strncpy.c  strtou32.c  terminal.c  time.c  uart.c  util.c
src/lib/.deps/: command.P  error.P  icache.P  init.P  led.P  md5.P  md5support.P  memcpy.P  mmu.P  reboot.P  serial-pxa.P  serial.P  strlen.P  strncmp.P  strncpy.P  strtou32.P  terminal.P  time.P  uart.P  util.P
tools/: Makefile  Makefile.am  Makefile.in  rebuild  rebuild-gcc
utils/: Makefile  Makefile.am  Makefile.in  README
utils/mkparamblock/: Makefile  Makefile.am  Makefile.in  mkparamblock.c
