###########################################################################
## Filename:      Makefile.am
## Version:       $Id: Makefile.am,v 1.4 2001/12/13 18:58:31 erikm Exp $
## Copyright:     Copyright (C) 1999, Erik Mouw
## Author:        Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Description:   Makefile
## Created at:    Tue Aug 17 17:24:16 1999
## Modified by:   Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Modified at:   Tue Aug 17 17:25:33 1999
###########################################################################


SUBDIRS		= \
	doc \
	tools \
	utils \
	include \
	src


EXTRA_DIST	= \
	README \
	RELEASE-NOTES \
	acconfig.h


CLEANFILES	= *~
