# -*- makefile -*-
###########################################################################
## Filename:      Makefile.am
## Version:       $Id: Makefile.am,v 1.14 2001/10/07 19:04:24 erikm Exp $
## Copyright:     Copyright (C) 1999, Erik Mouw
## Author:        Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Description:   Makefile
## Created at:    Tue Aug 17 17:25:56 1999
## Modified by:   Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Modified at:   Tue Sep 28 23:33:26 1999
###########################################################################

SUBDIRS		= \
	lib \
	blob \
	diag


CLEANFILES	= ${srcdir}/*~
