# -*- makefile -*-
###########################################################################
## Filename:      Makefile.am
## Version:       $Id: Makefile.am,v 1.13 2002/01/06 18:59:40 erikm Exp $
## Copyright:     Copyright (C) 1999, Erik Mouw
## Author:        Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Description:   Makefile
## Created at:    Tue Aug 17 17:25:56 1999
## Modified by:   Erik Mouw <J.A.K.Mouw@its.tudelft.nl>
## Modified at:   Tue Sep 28 23:36:51 1999
###########################################################################

SUBDIRS		= \
	arch


noinst_HEADERS	= \
	arch.h \
	command.h \
	command_hist.h \
	errno.h \
	error.h \
	flash.h \
	icache.h \
	init.h \
	lcd.h \
	led.h \
	linux.h \
	main.h \
	md5.h \
	md5support.h \
	memory.h \
	memsetup.h \
	param_block.h \
	partition.h \
	reboot.h \
	sa1100.h \
	sa1111.h \
	serial.h \
	terminal.h \
	time.h \
	types.h \
	util.h \
	lcd_ezx.h \
	uucodec.h \
	xmodem.h


CLEANFILES	= ${srcdir}/*~
